# corewar

./: a.out  enc_byte.c
v1/: CMakeLists.txt  battlefield.c  convert.c  corewar.h  cycle.c  cycle_die.c  enc_byte.c  get_next_line.c  main.c  op.c  op.h  operation_1.c  process.c  pushback.c  valid_champ.c
